# work_django

./: .env.sample  README.md  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_slug.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blog/templatetags/: blog_tags.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill_db.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0002_version.py  0003_product_user.py  0004_alter_product_options_product_is_publication.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_nav.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
data/: group_data.json
data/catalog/: category.json  product.json
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_country_alter_user_phone.py  0003_user_token.py
users/templates/users/: login.html  new_password_form.html  user_form.html
